# 3star-rankselect

./: .gitignore  CMakeLists.txt  README.md  Tree3.hpp  alignedallocator.hpp  bv.cpp  bv.hpp  constants.hpp  external_poppy.hpp  external_poppy2.hpp  external_rank9sel.hpp  external_sdsl_mcl.hpp  external_sdsl_rrr.hpp  external_sdsl_sd.hpp  external_sdsl_v1.hpp  external_sdsl_v5.hpp  external_simple_s.hpp  file_io.hpp  m3.hpp  naive.hpp  pastaflat.hpp  sampling.hpp  synth.hpp
multibench_out/: 1758489001_vb_others_s1_n1_indep.txt  1758489663_vb_others_s1_n1_indep.txt  1758489850_vb_others_s1_n1_indep.txt  1758490314_vb_others_s1_n1_indep.txt  1758490731_mypc_m3_s1_n1_indep.txt  1758490731_mypc_others_s1_n1_indep.txt  1758492187_mypc_m3_s1_n1_indep.txt  1758492187_mypc_others_s1_n1_indep.txt  1758492603_mypc_others_s1_n1_indep.txt  1758492690_mypc_m3_s1_n1_indep.txt  1758492690_mypc_others_s1_n1_indep.txt  1758492826_mypc_others_s1_n1_indep.txt
pasta/bit_vector/support/: flat_rank.hpp  rank.hpp
pybuild/: BV  run_bitvectors.py
